syntax = "proto3";
import "systems/ajax/malov/internalapi/commonmodel/stock/big_decimal.proto";

package systems.ajax.malov.commonmodel.stock.short_stock.proto;

option java_multiple_files = true;

message ShortStockRecordResponseDto{
  commonmodel.stock.big_decimal.proto.BDecimal openPrice = 1;
  commonmodel.stock.big_decimal.proto.BDecimal highPrice = 2;
  commonmodel.stock.big_decimal.proto.BDecimal lowPrice = 3;
  commonmodel.stock.big_decimal.proto.BDecimal currentPrice = 4;
}
